--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -7,7 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 /* COLORS */
 body {
   background: #000;
@@ -35,9 +35,9 @@ a.theme:active {
 }
 section > header {
   background-color: #0093d5;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
-  box-shadow: 0 1px 2px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
 }
 section > header .title {
   color: #fff;
@@ -123,28 +123,17 @@ header nav a {
   color: #fff;
 }
 header nav.box:not(.right) a {
-  -webkit-box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
-  -moz-box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
-  box-shadow: 1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+  -moz-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+  box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
 }
 header nav.box.right a {
-  -webkit-box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
-  -moz-box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
-  box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+  -moz-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+  box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
 }
 header nav.box a:active {
   background: rgba(0,0,0,0.1);
-}
-header nav.button a {
-  -webkit-border-radius: FORM-border-radius;
-  -moz-border-radius: FORM-border-radius;
-  border-radius: FORM-border-radius;
-  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0,0,0,0.5);
-  box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0,0,0,0.5);
-}
-header nav.button a:active {
-  background: rgba(0,0,0,0.2);
 }
 section > nav.groupbar {
   background-color: #222;
@@ -199,7 +188,7 @@ nav.groupbar > a.current {
 .list li a.selectable:active,
 .list li.theme,
 .list li a.theme {
-  background: #39abe1;
+  background: #03b1ff;
 }
 .list li.selectable:active,
 .list li a.selectable:active,
@@ -254,7 +243,7 @@ nav.groupbar > a.current {
   text-shadow: 0 1px 0px rgba(0,0,0,0.2);
 }
 /* ____________________ BUTTONS ____________________ */
-.button,
+a.button,
 button {
   -webkit-border-radius: FORM-border-radius;
   -moz-border-radius: FORM-border-radius;
@@ -268,38 +257,25 @@ button {
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
   border: solid 1px rgba(0,0,0,0.1);
 }
-.button:active,
+a.button:active,
 button:active {
   -webkit-box-shadow: inset 0 0 128px rgba(0,0,0,0.25);
   -moz-box-shadow: inset 0 0 128px rgba(0,0,0,0.25);
   box-shadow: inset 0 0 128px rgba(0,0,0,0.25);
   border-color: none;
 }
-.button,
-button {
-  background-color: #0093d5;
-}
-.button.secondary,
+a.button.secondary,
 button.secondary {
   color: #666 !important;
-  background-color: #ccc;
 }
-.button.accept,
-button.accept {
-  background-color: #009600;
-}
-.button.cancel,
-button.cancel {
-  background-color: #e33100;
-}
-.button[disabled],
+a.button[disabled],
 button[disabled] {
   background-color: #000;
 }
-button.theme,
-.button.theme,
-.tag.theme {
-  background-color: #0093d5;
+button,
+.button,
+.tag {
+  background-color: #007db5;
 }
 button.secondary,
 .button.secondary,
@@ -484,7 +460,7 @@ form input[type=range]:not(.checkbox),
 }
 form input[type=range]:not(.checkbox):active,
 .form input[type=range]:not(.checkbox):active {
-  background-color: #39abe1;
+  background-color: #03b1ff;
 }
 form input[type=range].checkbox,
 .form input[type=range].checkbox {
@@ -493,7 +469,7 @@ form input[type=range].checkbox,
 }
 form input[type=range].checkbox.active,
 .form input[type=range].checkbox.active {
-  background-color: #39abe1;
+  background-color: #03b1ff;
 }
 form input[type=range]::-webkit-slider-thumb,
 .form input[type=range]::-webkit-slider-thumb {
