--- a/src/stylesheets/Lungo.layout.list.styl
+++ b/src/stylesheets/Lungo.layout.list.styl
@@ -33,7 +33,7 @@
     & a
       display: block
 
-    & .icon, & img
+    & > .icon, > img
       float: left
       width: 32px
       height: 32px
