--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -8,207 +8,209 @@
  */
 
 @import "import/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700")
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
+// @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700")
+// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
 
+WHITE = white
 
-
-THEME         = #0093D5
-THEME_lighten = lighten(THEME, 15%)
-THEME_darken  = darken(THEME, 15%)
-
-DARK          = #222
-DARK_lighten = lighten(DARK, 25%)
-DARK_darken  = darken(DARK, 25%)
-
-
-
-THEME_dark = #222
-THEME_dark_current = #111
-THEME_dark_nav = #888
-THEME_dark_nav_active = #fff
-THEME_contrast = #444
-ASIDE_COLOR = #191919
+/* -------------------------- THEME -------------------------- */
+CONTENT         = #f4f5f5
+COLOR_secondary = #BFBFBF
+COLOR_cancel    = #EE6557
+COLOR_accept    = #3FB58E
+DARK            = #222
+DARK_light      = lighten(DARK, 25%)
+DARK_dark       = darken(DARK, 15%)
+DARK_darkest    = darken(DARK, 30%)
+LIST_color      = #333
+LIST_color_2nd  = lighten(LIST_color, 35%)
+LIST_border     = lighten(LIST_color, 90%)
+NAV_LINK        = #888
+NAV_LINK_ACTIVE = WHITE
+THEME           = #0093D5
+THEME_light     = lighten(THEME, 15%)
+THEME_dark      = darken(THEME, 15%)
+//?
 COLOR = #484a49
-NOTIFICATION_error = #e33100
-NOTIFICATION_alert = #ffb515
-NOTIFICATION_success = #009600
 FORM_border_radius = 1px
 
 
-/* COLORS */
-COLOR_SECONDARY = #ccc
-COLOR_CANCEL    = #e33100
-COLOR_ACCEPT    = #009600
-COLOR_THEME     = #237fd7
-
-
-
 body
-  background: #000
-  font-family: "Open Sans", "Titillium Web",  Helvetica, Arial, sans-serif
+  background-color: DARK
+  font-family: "Helvetica Neue", "Open Sans", "Titillium Web",  Helvetica, Arial, sans-serif
   font-weight: 400
   font-size: 13px
   line-height: 1.3em
   letter-spacing: -0.05em
 
-
-
-
 .theme
   &, li&, a&
-    background:
-      THEME-light
+    background-color: THEME-light
     &:active
-      background: THEME
-
+      background-color: THEME
 
 [data-control="pull"]
     color: #666
     text-shadow: 0 1px 0 white
 
 
+/* -------------------------- LAYOUT COLORS -------------------------- */
 section
   & > header
     background-color: THEME
-    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 THEME_lighten, inset 0 -1px 0 THEME_darken
-    & .title
-      color: #fff
-
-  & > footer
-    background-color: THEME-dark
-    box-shadow inset 0 3px 0 #333
-    & > nav a
-      box-shadow 1px 0 0 #151515
-      &.current
-        color:  THEME_dark_nav_active
-        background: THEME_dark_current
-        box-shadow -1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 THEME
-
+    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 THEME_light, inset 0 -1px 0 THEME_dark
+    color: #fff
+  & > footer, & nav.groupbar
+    background-color: DARK
+    box-shadow inset 0 3px 0 DARK_dark
   & > article, & > [data-control="pull"]
-    background: #f4f5f5
-    // background-color: #ddd
-
+    background-color: CONTENT
+    &.splash
+      background: THEME
+      color: #fff
   &.aside
-    box-shadow -1px 0 0 rgba(0,0,0,0.2)
+    box-shadow -1px 0 2px rgba(0,0,0,0.2)
     &.right
-      box-shadow 4px 0 8px rgba(0,0,0,0.5)
+      box-shadow 1px 0 2px rgba(0,0,0,0.2)
 
-
+DARKEST = darken(DARK_darkest, 15%)
 aside
+  background-color: DARK_dark
   color: #fff
-  background: ASIDE_COLOR
+  & > header, > footer
+    background-color: DARK_darkest
+  & > header
+    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 DARK, inset 0 -1px 0 DARKEST
 
-  & header, footer
-    background: THEME_dark_current
-    text-shadow: none
-  & header
-    box-shadow inset 0 -1px 0 rgba(0,0,0,0.2)
-  & article
+
+/* -------------------------- NAVIGATION -------------------------- */
+nav
+  section > header > &
+    & a
+      color: #fff
+    &.box
+      &:not(.right) a
+        box-shadow 1px 0 0 THEME_light, inset -1px 0 0 THEME_dark
+      &.right a
+        box-shadow -1px 0 0 THEME_light, inset 1px 0 0 THEME_dark
+      & a:active
+        background: THEME_dark
+
+  section > &.groupbar > a.current
+    box-shadow inset 0 -3px 0 THEME
+
+  section > footer > & > a, &.groupbar > a
+    color: NAV_LINK
+    &.current
+      color: NAV_LINK_ACTIVE
+
+  section > footer > & > a
+    box-shadow 1px 0 0 DARK_dark
+    &.current
+      color:  NAV_LINK_ACTIVE
+      background-color: DARK_dark
+      box-shadow inset 0 3px 0 THEME
+
+  aside &
+    & a
+      &.current .icon
+        color: white
+      &:not(.current) .icon
+        color: NAV_LINK
+    &.box
+      &:not(.right) a
+        box-shadow 1px 0 0 DARK, inset -1px 0 0 DARKEST
+      &.right a
+        box-shadow -1px 0 0 DARK, inset 1px 0 0 DARKEST
+      & a:active
+        background: DARKEST
+
+
+/* -------------------------- LISTS -------------------------- */
+.list
+  section & li
+    background: #fff
+    &:not(.anchor)
+      border-bottom: inset 1px LIST_border
+    &.secondary
+      box-shadow: inset 4px 0px 0px COLOR_secondary
+    &.accept
+      box-shadow: inset 4px 0px 0px COLOR_accept
+    &.cancel
+      box-shadow: inset 4px 0px 0px COLOR_cancel
+    &, & a
+      color: LIST_color
+      &.anchor
+        background: DARK
+      &.dark
+        background: DARK_light
+      &.selectable:active, &.theme, &.active
+        background: THEME_light
+      &.light
+        background:  LIST_border
+        color: LIST_color_2nd
+      &.dark, &.selectable:active, &.theme, &.anchor
+        &, small, & .right:not(.tag)
+          color: #fff
+      & small, & .right:not(.tag)
+        color: LIST_color_2nd
+
+  &:not(.indented) li
+    &.dark, &.theme, &.light
+      border-bottom-color: rgba(0,0,0,0.1)
+
+  aside & li
     background: none
-  & nav a
-    &.current .icon
-      color: white
-    &:not(.current) .icon
-      color: THEME_dark_nav
-
-  & .list li
-    background: none
-    border-bottom-color: THEME_dark !important
-
+    border-bottom-color: DARK
     &.current
       background: THEME
-      border-bottom-color: THEME
+      border-bottom-color: transparent
       & strong, & small, & .icon
         color: #fff
-
     & strong
       color: #999
     & small, .icon
       color: #666
 
 
-header nav
-  & a
-    color: #fff
-
-  &.box
-    &:not(.right) a
-      box-shadow 1px 0 0 THEME_lighten, inset -1px 0 0 THEME_darken
-    &.right a
-      box-shadow -1px 0 0 THEME_lighten, inset 1px 0 0 THEME_darken
-    & a:active
-      background: rgba(0,0,0,0.1)
-
-
-section > nav.groupbar
-  background-color: THEME_dark
-  & > a.current
-    box-shadow inset 0 -3px 0 THEME
-
-
-footer > nav > a, nav.groupbar > a
-  color: THEME_dark_nav
-  &.current
-    color: THEME_dark_nav_active
-
-
-
-LIST-border = #e5e5e5
-LIST-color = #111
-LIST-color-secondary = #555
-
-.list
-  & li
-    background: #fff
-    border-bottom: inset 1px LIST-border
-
-    &.secondary
-      box-shadow: inset 4px 0px 0px COLOR_SECONDARY
-    &.accept
-      box-shadow: inset 4px 0px 0px COLOR_ACCEPT
-    &.cancel
-      box-shadow: inset 4px 0px 0px COLOR_CANCEL
-
-    &, & a
-      color: LIST-color
-
-      &.dark
-        background: THEME_contrast
-        &, & a
-          color: #fff
-
-      &.selectable:active, &.theme
-        background: THEME_lighten
-        &, & a
-          color: #fff
-
-      &.light
-        background:  LIST-border
-        text-shadow: 0 1px 0 #eee
-        &, & a
-          color: THEME_dark_nav
-
-      &.anchor
-        background: THEME_dark
-        border-bottom: none
-        &, & a
-          color: #fff !important
-
-      & small, & .right:not(.tag)
-        color: LIST-color-secondary
-
-  &:not(.indented) li
-    &.dark, &.theme, &.light
-      border-bottom-color: rgba(0,0,0,0.1)
-
-.splash
-  background: THEME-dark
+/* -------------------------- TAG -------------------------- */
+.tag
   color: #fff
-  text-shadow: 0 1px 0px rgba(0,0,0,0.2)
+  border-radius 2px
+  font-weight: 400 !important
+  &.count
+    background: THEME
+  header .count
+    background: THEME-dark !important
+  footer &
+    box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
+  article .list &
+    box-shadow inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)
 
 
-/* ____________________ BUTTONS ____________________ */
+/* -------------------------- NOTIFICATION -------------------------- */
+.notification
+  color: #fff
+  & .window
+    &.confirm
+      background: #333
+    &.notify
+      text-shadow: 0 1px 0px rgba(0,0,0,0.1)
+      .box-shadow( inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), 0px 1px 2px rgba(0,0,0,0.25) )
+      &.error
+        background: COLOR_cancel
+      &.alert
+        background: COLOR_secondary
+      &.success
+        background: COLOR_accept
+    &.url
+      & .close
+        background: #000
+        border: solid 2px #fff
+        box-shadow: 0 0 4px black
+
+
+/* -------------------------- BUTTONS -------------------------- */
 a.button, button
   border-radius(FORM-border-radius)
   color: white
@@ -226,13 +228,18 @@ a.button, button
 
 button, .button, .tag
   &
-    background-color: THEME_darken
+    background-color: THEME_dark
   &.secondary
-    background-color: COLOR_SECONDARY
+    background-color: COLOR_secondary
   &.accept
-    background-color: COLOR_ACCEPT
+    background-color: COLOR_accept
   &.cancel
-    background-color: COLOR_CANCEL
+    background-color: COLOR_cancel
+
+
+
+
+/* -------------------------- BUTTONS -------------------------- */
 
 FORM_shadow_form =  'inset 0 1px 2px rgba(0,0,0,0.1)'
 FORM_shadow_form_active =  'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef'
@@ -274,14 +281,14 @@ form, .form
     &:not(.checkbox)
       background-color: #c7c7c7
       &:active
-        background-color: THEME_lighten
+        background-color: THEME_light
 
 
     &.checkbox
       background-color: #aaaaaa
       color: rgba(255,255,255,0.6)
       &.active
-        background-color: THEME_lighten
+        background-color: THEME_light
 
     &::-webkit-slider-thumb
       border-radius: FORM-border-radius
@@ -308,36 +315,3 @@ form, .form
           text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important
           font-size: 12px
 
-
-.tag
-  color: #fff
-  border-radius 2px
-  font-weight: 400 !important
-  &.count
-    background: THEME
-  header .count
-    background: THEME-dark !important
-  footer &
-    box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
-  article .list &
-    box-shadow inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)
-
-.notification
-  color: #fff
-  & .window
-    &.confirm
-      background: #333
-    &.notify
-      text-shadow: 0 1px 0px rgba(0,0,0,0.1)
-      .box-shadow( inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), 0px 1px 2px rgba(0,0,0,0.25) )
-      &.error
-        background: NOTIFICATION-error
-      &.alert
-        background: NOTIFICATION-alert
-      &.success
-        background: NOTIFICATION-success
-    &.url
-      & .close
-        background: #000
-        border: solid 2px #fff
-        box-shadow: 0 0 4px black
