--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -6,12 +6,10 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-@import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700");
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
-/* COLORS */
+/* -------------------------- THEME -------------------------- */
 body {
-  background: #000;
-  font-family: "Open Sans", "Titillium Web", Helvetica, Arial, sans-serif;
+  background-color: #222;
+  font-family: "Helvetica Neue", "Open Sans", "Titillium Web", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 13px;
   line-height: 1.3em;
@@ -20,12 +18,12 @@ body {
 .theme,
 li.theme,
 a.theme {
-  background: THEME-light;
+  background-color: THEME-light;
 }
 .theme:active,
 li.theme:active,
 a.theme:active {
-  background: #0093d5;
+  background-color: #0093d5;
 }
 [data-control="pull"] {
   color: #666;
@@ -33,65 +31,94 @@ a.theme:active {
   -moz-text-shadow: 0 1px 0 #fff;
   text-shadow: 0 1px 0 #fff;
 }
+/* -------------------------- LAYOUT COLORS -------------------------- */
 section > header {
   background-color: #0093d5;
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
   -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
   box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #03b1ff, inset 0 -1px 0 #007db5;
-}
-section > header .title {
   color: #fff;
 }
-section > footer {
-  background-color: THEME-dark;
-  -webkit-box-shadow: inset 0 3px 0 #333;
-  -moz-box-shadow: inset 0 3px 0 #333;
-  box-shadow: inset 0 3px 0 #333;
-}
-section > footer > nav a {
-  -webkit-box-shadow: 1px 0 0 #151515;
-  -moz-box-shadow: 1px 0 0 #151515;
-  box-shadow: 1px 0 0 #151515;
-}
-section > footer > nav a.current {
-  color: #fff;
-  background: #111;
-  -webkit-box-shadow: -1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 #0093d5;
-  -moz-box-shadow: -1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 #0093d5;
-  box-shadow: -1px 0 0 #252525, 1px 0 0 #252525, inset 0 3px 0 #0093d5;
+section > footer,
+section nav.groupbar {
+  background-color: #222;
+  -webkit-box-shadow: inset 0 3px 0 #1d1d1d;
+  -moz-box-shadow: inset 0 3px 0 #1d1d1d;
+  box-shadow: inset 0 3px 0 #1d1d1d;
 }
 section > article,
 section > [data-control="pull"] {
-  background: #f4f5f5;
+  background-color: #f4f5f5;
+}
+section > article.splash,
+section > [data-control="pull"].splash {
+  background: #0093d5;
+  color: #fff;
 }
 section.aside {
-  -webkit-box-shadow: -1px 0 0 rgba(0,0,0,0.2);
-  -moz-box-shadow: -1px 0 0 rgba(0,0,0,0.2);
-  box-shadow: -1px 0 0 rgba(0,0,0,0.2);
+  -webkit-box-shadow: -1px 0 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: -1px 0 2px rgba(0,0,0,0.2);
+  box-shadow: -1px 0 2px rgba(0,0,0,0.2);
 }
 section.aside.right {
-  -webkit-box-shadow: 4px 0 8px rgba(0,0,0,0.5);
-  -moz-box-shadow: 4px 0 8px rgba(0,0,0,0.5);
-  box-shadow: 4px 0 8px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 1px 0 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: 1px 0 2px rgba(0,0,0,0.2);
+  box-shadow: 1px 0 2px rgba(0,0,0,0.2);
 }
 aside {
+  background-color: #1d1d1d;
   color: #fff;
-  background: #191919;
 }
-aside header,
-aside footer {
-  background: #111;
-  -webkit-text-shadow: none;
-  -moz-text-shadow: none;
-  text-shadow: none;
+aside > header,
+aside > footer {
+  background-color: #181818;
 }
-aside header {
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2);
-  -moz-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2);
-  box-shadow: inset 0 -1px 0 rgba(0,0,0,0.2);
+aside > header {
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #222, inset 0 -1px 0 #141414;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #222, inset 0 -1px 0 #141414;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 #222, inset 0 -1px 0 #141414;
 }
-aside article {
-  background: none;
+/* -------------------------- NAVIGATION -------------------------- */
+section > header > nav a {
+  color: #fff;
+}
+section > header > nav.box:not(.right) a {
+  -webkit-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+  -moz-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+  box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+}
+section > header > nav.box.right a {
+  -webkit-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+  -moz-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+  box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+}
+section > header > nav.box a:active {
+  background: #007db5;
+}
+section > nav.groupbar > a.current {
+  -webkit-box-shadow: inset 0 -3px 0 #0093d5;
+  -moz-box-shadow: inset 0 -3px 0 #0093d5;
+  box-shadow: inset 0 -3px 0 #0093d5;
+}
+section > footer > nav > a,
+nav.groupbar > a {
+  color: #888;
+}
+section > footer > nav > a.current,
+nav.groupbar > a.current {
+  color: #fff;
+}
+section > footer > nav > a {
+  -webkit-box-shadow: 1px 0 0 #1d1d1d;
+  -moz-box-shadow: 1px 0 0 #1d1d1d;
+  box-shadow: 1px 0 0 #1d1d1d;
+}
+section > footer > nav > a.current {
+  color: #fff;
+  background-color: #1d1d1d;
+  -webkit-box-shadow: inset 0 3px 0 #0093d5;
+  -moz-box-shadow: inset 0 3px 0 #0093d5;
+  box-shadow: inset 0 3px 0 #0093d5;
 }
 aside nav a.current .icon {
   color: #fff;
@@ -99,13 +126,110 @@ aside nav a.current .icon {
 aside nav a:not(.current) .icon {
   color: #888;
 }
+aside nav.box:not(.right) a {
+  -webkit-box-shadow: 1px 0 0 #222, inset -1px 0 0 #141414;
+  -moz-box-shadow: 1px 0 0 #222, inset -1px 0 0 #141414;
+  box-shadow: 1px 0 0 #222, inset -1px 0 0 #141414;
+}
+aside nav.box.right a {
+  -webkit-box-shadow: -1px 0 0 #222, inset 1px 0 0 #141414;
+  -moz-box-shadow: -1px 0 0 #222, inset 1px 0 0 #141414;
+  box-shadow: -1px 0 0 #222, inset 1px 0 0 #141414;
+}
+aside nav.box a:active {
+  background: #141414;
+}
+/* -------------------------- LISTS -------------------------- */
+section .list li {
+  background: #fff;
+}
+section .list li:not(.anchor) {
+  border-bottom: inset 1px #ebebeb;
+}
+section .list li.secondary {
+  -webkit-box-shadow: inset 4px 0px 0px #bfbfbf;
+  -moz-box-shadow: inset 4px 0px 0px #bfbfbf;
+  box-shadow: inset 4px 0px 0px #bfbfbf;
+}
+section .list li.accept {
+  -webkit-box-shadow: inset 4px 0px 0px #3fb58e;
+  -moz-box-shadow: inset 4px 0px 0px #3fb58e;
+  box-shadow: inset 4px 0px 0px #3fb58e;
+}
+section .list li.cancel {
+  -webkit-box-shadow: inset 4px 0px 0px #ee6557;
+  -moz-box-shadow: inset 4px 0px 0px #ee6557;
+  box-shadow: inset 4px 0px 0px #ee6557;
+}
+section .list li,
+section .list li a {
+  color: #333;
+}
+section .list li.anchor,
+section .list li a.anchor {
+  background: #222;
+}
+section .list li.dark,
+section .list li a.dark {
+  background: #595959;
+}
+section .list li.selectable:active,
+section .list li a.selectable:active,
+section .list li.theme,
+section .list li a.theme,
+section .list li.active,
+section .list li a.active {
+  background: #03b1ff;
+}
+section .list li.light,
+section .list li a.light {
+  background: #ebebeb;
+  color: #7a7a7a;
+}
+section .list li.dark,
+section .list li a.dark,
+section .list li.selectable:active,
+section .list li a.selectable:active,
+section .list li.theme,
+section .list li a.theme,
+section .list li.anchor,
+section .list li a.anchor,
+section .list li.dark small,
+section .list li a.dark small,
+section .list li.selectable:active small,
+section .list li a.selectable:active small,
+section .list li.theme small,
+section .list li a.theme small,
+section .list li.anchor small,
+section .list li a.anchor small,
+section .list li.dark .right:not(.tag),
+section .list li a.dark .right:not(.tag),
+section .list li.selectable:active .right:not(.tag),
+section .list li a.selectable:active .right:not(.tag),
+section .list li.theme .right:not(.tag),
+section .list li a.theme .right:not(.tag),
+section .list li.anchor .right:not(.tag),
+section .list li a.anchor .right:not(.tag) {
+  color: #fff;
+}
+section .list li small,
+section .list li a small,
+section .list li .right:not(.tag),
+section .list li a .right:not(.tag) {
+  color: #7a7a7a;
+}
+.list:not(.indented) li.dark,
+.list:not(.indented) li.theme,
+.list:not(.indented) li.light {
+  border-bottom-color: rgba(0,0,0,0.1);
+}
 aside .list li {
   background: none;
-  border-bottom-color: #222 !important;
+  border-bottom-color: #222;
 }
 aside .list li.current {
   background: #0093d5;
-  border-bottom-color: #0093d5;
+  border-bottom-color: transparent;
 }
 aside .list li.current strong,
 aside .list li.current small,
@@ -119,130 +243,71 @@ aside .list li small,
 aside .list li .icon {
   color: #666;
 }
-header nav a {
+/* -------------------------- TAG -------------------------- */
+.tag {
+  color: #fff;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  font-weight: 400 !important;
+}
+.tag.count {
+  background: #0093d5;
+}
+.tag header .count {
+  background: THEME-dark !important;
+}
+footer .tag {
+  -webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
+  -moz-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
+  box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
+}
+article .list .tag {
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+}
+/* -------------------------- NOTIFICATION -------------------------- */
+.notification {
   color: #fff;
 }
-header nav.box:not(.right) a {
-  -webkit-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
-  -moz-box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
-  box-shadow: 1px 0 0 #03b1ff, inset -1px 0 0 #007db5;
+.notification .window.confirm {
+  background: #333;
 }
-header nav.box.right a {
-  -webkit-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
-  -moz-box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
-  box-shadow: -1px 0 0 #03b1ff, inset 1px 0 0 #007db5;
+.notification .window.notify {
+  -webkit-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
+  -moz-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
+  text-shadow: 0 1px 0px rgba(0,0,0,0.1);
 }
-header nav.box a:active {
-  background: rgba(0,0,0,0.1);
+.notification .window.notify .box-shadow( inset 0 1px 0 rgba(255,
+.notification .window.notify 255,
+.notification .window.notify 255,
+.notification .window.notify 0.2),
+.notification .window.notify inset 0-1px0rgba(0,
+.notification .window.notify 0,
+.notification .window.notify 0,
+.notification .window.notify 0.2),
+.notification .window.notify 0px1px2pxrgba(0,
+.notification .window.notify 0,
+.notification .window.notify 0,
+.notification .window.notify 0.25) ),
+.notification .window.notify.error {
+  background: #ee6557;
 }
-section > nav.groupbar {
-  background-color: #222;
+.notification .window.notify.alert {
+  background: #bfbfbf;
 }
-section > nav.groupbar > a.current {
-  -webkit-box-shadow: inset 0 -3px 0 #0093d5;
-  -moz-box-shadow: inset 0 -3px 0 #0093d5;
-  box-shadow: inset 0 -3px 0 #0093d5;
+.notification .window.notify.success {
+  background: #3fb58e;
 }
-footer > nav > a,
-nav.groupbar > a {
-  color: #888;
+.notification .window.url .close {
+  background: #000;
+  border: solid 2px #fff;
+  -webkit-box-shadow: 0 0 4px #000;
+  -moz-box-shadow: 0 0 4px #000;
+  box-shadow: 0 0 4px #000;
 }
-footer > nav > a.current,
-nav.groupbar > a.current {
-  color: #fff;
-}
-.list li {
-  background: #fff;
-  border-bottom: inset 1px #e5e5e5;
-}
-.list li.secondary {
-  -webkit-box-shadow: inset 4px 0px 0px #ccc;
-  -moz-box-shadow: inset 4px 0px 0px #ccc;
-  box-shadow: inset 4px 0px 0px #ccc;
-}
-.list li.accept {
-  -webkit-box-shadow: inset 4px 0px 0px #009600;
-  -moz-box-shadow: inset 4px 0px 0px #009600;
-  box-shadow: inset 4px 0px 0px #009600;
-}
-.list li.cancel {
-  -webkit-box-shadow: inset 4px 0px 0px #e33100;
-  -moz-box-shadow: inset 4px 0px 0px #e33100;
-  box-shadow: inset 4px 0px 0px #e33100;
-}
-.list li,
-.list li a {
-  color: #111;
-}
-.list li.dark,
-.list li a.dark {
-  background: #444;
-}
-.list li.dark,
-.list li a.dark,
-.list li.dark a,
-.list li a.dark a {
-  color: #fff;
-}
-.list li.selectable:active,
-.list li a.selectable:active,
-.list li.theme,
-.list li a.theme {
-  background: #03b1ff;
-}
-.list li.selectable:active,
-.list li a.selectable:active,
-.list li.theme,
-.list li a.theme,
-.list li.selectable:active a,
-.list li a.selectable:active a,
-.list li.theme a,
-.list li a.theme a {
-  color: #fff;
-}
-.list li.light,
-.list li a.light {
-  background: #e5e5e5;
-  -webkit-text-shadow: 0 1px 0 #eee;
-  -moz-text-shadow: 0 1px 0 #eee;
-  text-shadow: 0 1px 0 #eee;
-}
-.list li.light,
-.list li a.light,
-.list li.light a,
-.list li a.light a {
-  color: #888;
-}
-.list li.anchor,
-.list li a.anchor {
-  background: #222;
-  border-bottom: none;
-}
-.list li.anchor,
-.list li a.anchor,
-.list li.anchor a,
-.list li a.anchor a {
-  color: #fff !important;
-}
-.list li small,
-.list li a small,
-.list li .right:not(.tag),
-.list li a .right:not(.tag) {
-  color: #555;
-}
-.list:not(.indented) li.dark,
-.list:not(.indented) li.theme,
-.list:not(.indented) li.light {
-  border-bottom-color: rgba(0,0,0,0.1);
-}
-.splash {
-  background: THEME-dark;
-  color: #fff;
-  -webkit-text-shadow: 0 1px 0px rgba(0,0,0,0.2);
-  -moz-text-shadow: 0 1px 0px rgba(0,0,0,0.2);
-  text-shadow: 0 1px 0px rgba(0,0,0,0.2);
-}
-/* ____________________ BUTTONS ____________________ */
+/* -------------------------- BUTTONS -------------------------- */
 a.button,
 button {
   -webkit-border-radius: FORM-border-radius;
@@ -280,18 +345,19 @@ button,
 button.secondary,
 .button.secondary,
 .tag.secondary {
-  background-color: #ccc;
+  background-color: #bfbfbf;
 }
 button.accept,
 .button.accept,
 .tag.accept {
-  background-color: #009600;
+  background-color: #3fb58e;
 }
 button.cancel,
 .button.cancel,
 .tag.cancel {
-  background-color: #e33100;
+  background-color: #ee6557;
 }
+/* -------------------------- BUTTONS -------------------------- */
 form label,
 .form label {
   color: #999;
@@ -505,66 +571,4 @@ form .progress .bar .value .label,
   -moz-text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
   text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
   font-size: 12px;
-}
-.tag {
-  color: #fff;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-  font-weight: 400 !important;
-}
-.tag.count {
-  background: #0093d5;
-}
-.tag header .count {
-  background: THEME-dark !important;
-}
-footer .tag {
-  -webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
-  -moz-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
-  box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
-}
-article .list .tag {
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-}
-.notification {
-  color: #fff;
-}
-.notification .window.confirm {
-  background: #333;
-}
-.notification .window.notify {
-  -webkit-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
-  -moz-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
-  text-shadow: 0 1px 0px rgba(0,0,0,0.1);
-}
-.notification .window.notify .box-shadow( inset 0 1px 0 rgba(255,
-.notification .window.notify 255,
-.notification .window.notify 255,
-.notification .window.notify 0.2),
-.notification .window.notify inset 0-1px0rgba(0,
-.notification .window.notify 0,
-.notification .window.notify 0,
-.notification .window.notify 0.2),
-.notification .window.notify 0px1px2pxrgba(0,
-.notification .window.notify 0,
-.notification .window.notify 0,
-.notification .window.notify 0.25) ),
-.notification .window.notify.error {
-  background: NOTIFICATION-error;
-}
-.notification .window.notify.alert {
-  background: NOTIFICATION-alert;
-}
-.notification .window.notify.success {
-  background: NOTIFICATION-success;
-}
-.notification .window.url .close {
-  background: #000;
-  border: solid 2px #fff;
-  -webkit-box-shadow: 0 0 4px #000;
-  -moz-box-shadow: 0 0 4px #000;
-  box-shadow: 0 0 4px #000;
 }
