--- a/src/stylesheets/import/constants.styl
+++ b/src/stylesheets/import/constants.styl
@@ -5,13 +5,13 @@ HEADER_GROUPBAR_HEIGHT = 30px
 ARTICLE_BOTTOM = (HEADER_FOOTER_HEIGHT - 1)
 ARTICLE_WITH_HEADER_EXTENDED = (HEADER_FOOTER_HEIGHT + HEADER_GROUPBAR_HEIGHT)
 
-BORDER_RADIUS = 2px
+ASIDE_WIDTH         = 264px
+ASIDE_WIDTH_SMALL   = 64px
 
-ASIDE_WIDTH = 264px
-ASIDE_WIDTH_SMALL = 64px
+BORDER_RADIUS       = 2px
 
-DEFAULT_TRANSITION = easeOutSine
+DEFAULT_TRANSITION  = easeOutSine
 
-
-FONT_SIZE_BIG   = 1.2em
-FONT_SIZE_SMALL = 0.9em
+FONT_SIZE_TINY      = 11px
+FONT_SIZE_SMALL     = 0.9em
+FONT_SIZE_BIG       = 1.2em
