--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -22,6 +22,7 @@ DARK            = #222
 DARK_light      = lighten(DARK, 25%)
 DARK_dark       = darken(DARK, 15%)
 DARK_darkest    = darken(DARK, 30%)
+FORM_radius     = 1px
 LIST_color      = #333
 LIST_color_2nd  = lighten(LIST_color, 35%)
 LIST_border     = lighten(LIST_color, 90%)
@@ -32,7 +33,6 @@ THEME_light     = lighten(THEME, 15%)
 THEME_dark      = darken(THEME, 15%)
 //?
 COLOR = #484a49
-FORM_border_radius = 1px
 
 
 body
@@ -161,10 +161,13 @@ nav
 
   aside & li
     background: none
-    border-bottom-color: DARK
+    &:not(:first-child)
+      border-top: solid 1px  DARK
+    &:not(:last-child)
+      border-bottom: solid 1px DARKEST
     &.current
       background: THEME
-      border-bottom-color: transparent
+      border-color: transparent
       & strong, & small, & .icon
         color: #fff
     & strong
@@ -177,16 +180,13 @@ nav
 .tag
   color: #fff
   border-radius 2px
-  font-weight: 400 !important
+  font-weight: 700 !important
   &.count
-    background: THEME
+    background-color: THEME
   header .count
-    background: THEME-dark !important
+    background-color: THEME-dark !important
   footer &
     box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
-  article .list &
-    box-shadow inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)
-
 
 /* -------------------------- NOTIFICATION -------------------------- */
 .notification
@@ -271,12 +271,12 @@ form, .form
   & .select:after
     background: FORM_border_color
     color: white
-    border-top-right-radius: FORM_border_radius
-    border-bottom-right-radius: FORM_border_radius
+    border-top-right-radius: FORM_radius
+    border-bottom-right-radius: FORM_radius
 
   & input[type=range]
     box-shadow  FORM_shadow_form
-    border-radius FORM_border_radius
+    border-radius FORM_radius
 
     &:not(.checkbox)
       background-color: #c7c7c7
@@ -314,4 +314,3 @@ form, .form
           color: rgba(0,0,0,0.6)
           text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important
           font-size: 12px
-
