--- a/src/stylesheets/Lungo.widgets.styl
+++ b/src/stylesheets/Lungo.widgets.styl
@@ -53,10 +53,12 @@
 .round
   border-radius( 4px )
 
+/* ================================  TAG  ================================ */
 .tag
   display: inline-block
-  font-size: FONT_SIZE_SMALL
-  line-height: FONT_SIZE_BIG
+  padding: 0 3px
+  font-size: FONT_SIZE_TINY
+  line-height: 1.3em
   text-align: center
 
 size = 5px
