--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -225,11 +225,16 @@ section .list li a .right:not(.tag) {
 }
 aside .list li {
   background: none;
-  border-bottom-color: #222;
+}
+aside .list li:not(:first-child) {
+  border-top: solid 1px #222;
+}
+aside .list li:not(:last-child) {
+  border-bottom: solid 1px #141414;
 }
 aside .list li.current {
   background: #0093d5;
-  border-bottom-color: transparent;
+  border-color: transparent;
 }
 aside .list li.current strong,
 aside .list li.current small,
@@ -249,23 +254,18 @@ aside .list li .icon {
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
-  font-weight: 400 !important;
+  font-weight: 700 !important;
 }
 .tag.count {
-  background: #0093d5;
+  background-color: #0093d5;
 }
 .tag header .count {
-  background: THEME-dark !important;
+  background-color: THEME-dark !important;
 }
 footer .tag {
   -webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   -moz-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
-}
-article .list .tag {
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
 }
 /* -------------------------- NOTIFICATION -------------------------- */
 .notification {
