--- a/src/stylesheets/Lungo.widgets.loading.styl
+++ b/src/stylesheets/Lungo.widgets.loading.styl
@@ -105,7 +105,7 @@
       background-color: rgba(255,255,255,0.15)
 
 
-section.show, section.current, .notification
+section.show, section.active, .notification
   & .loading
     -webkit-animation: rotatingLoader .5s  infinite linear
     moz-animation:  rotatingLoader .5s  infinite linear
