--- a/src/stylesheets/css/Lungo.widgets.loading.css
+++ b/src/stylesheets/css/Lungo.widgets.loading.css
@@ -148,7 +148,7 @@
   background-color: rgba(255,255,255,0.15);
 }
 section.show .loading,
-section.current .loading,
+section.active .loading,
 .notification .loading {
   -webkit-animation: rotatingLoader 0.5s infinite linear;
   moz-animation: rotatingLoader 0.5s infinite linear;
