--- a/src/stylesheets/Lungo.theme.default.styl
+++ b/src/stylesheets/Lungo.theme.default.styl
@@ -8,8 +8,7 @@
  */
 
 @import "import/vendor.styl"
-// @import url("http://fonts.googleapis.com/css?family=Titillium+Web:200,400,700")
-// @import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
 
 WHITE = white
 
@@ -37,7 +36,7 @@ COLOR = #484a49
 
 body
   background-color: DARK
-  font-family: "Helvetica Neue", "Open Sans", "Titillium Web",  Helvetica, Arial, sans-serif
+  font-family: "Helvetica Neue", "Open Sans", Helvetica, Arial, sans-serif
   font-weight: 400
   font-size: 13px
   line-height: 1.3em
@@ -192,23 +191,27 @@ nav
 .notification
   color: #fff
   & .window
-    &.confirm
-      background: #333
-    &.notify
-      text-shadow: 0 1px 0px rgba(0,0,0,0.1)
-      .box-shadow( inset 0 1px 0 rgba(255,255,255,0.2), inset 0 -1px 0 rgba(0,0,0,0.2), 0px 1px 2px rgba(0,0,0,0.25) )
-      &.error
-        background: COLOR_cancel
-      &.alert
-        background: COLOR_secondary
-      &.success
-        background: COLOR_accept
-    &.url
-      & .close
-        background: #000
-        border: solid 2px #fff
-        box-shadow: 0 0 4px black
+    &.growl
+      background: rgba(0,0,0,0.8)
 
+    &:not(.growl)
+      background: #e6e6e6
+      color: #222
+      box-shadow(0 0 8px #000)
+      & button, .button
+        background: #fff !important
+        box-shadow: none !important
+        color: THEME_dark !important
+        border-radius 0px !important
+        border: none !important
+        margin-bottom: 1px
+
+      &.error
+        background: darken(COLOR_cancel, 25%)
+        color: #fff
+      &.success
+        background: darken(COLOR_accept, 25%)
+        color: #fff
 
 /* -------------------------- BUTTONS -------------------------- */
 a.button, button
