--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -6,10 +6,11 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 /* -------------------------- THEME -------------------------- */
 body {
   background-color: #222;
-  font-family: "Helvetica Neue", "Open Sans", "Titillium Web", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", "Open Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 13px;
   line-height: 1.3em;
@@ -271,41 +272,36 @@ footer .tag {
 .notification {
   color: #fff;
 }
-.notification .window.confirm {
-  background: #333;
+.notification .window.growl {
+  background: rgba(0,0,0,0.8);
 }
-.notification .window.notify {
-  -webkit-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
-  -moz-text-shadow: 0 1px 0px rgba(0,0,0,0.1);
-  text-shadow: 0 1px 0px rgba(0,0,0,0.1);
+.notification .window:not(.growl) {
+  background: #e6e6e6;
+  color: #222;
+  -webkit-box-shadow: 0 0 8px #000;
+  -moz-box-shadow: 0 0 8px #000;
+  box-shadow: 0 0 8px #000;
 }
-.notification .window.notify .box-shadow( inset 0 1px 0 rgba(255,
-.notification .window.notify 255,
-.notification .window.notify 255,
-.notification .window.notify 0.2),
-.notification .window.notify inset 0-1px0rgba(0,
-.notification .window.notify 0,
-.notification .window.notify 0,
-.notification .window.notify 0.2),
-.notification .window.notify 0px1px2pxrgba(0,
-.notification .window.notify 0,
-.notification .window.notify 0,
-.notification .window.notify 0.25) ),
-.notification .window.notify.error {
-  background: #ee6557;
+.notification .window:not(.growl) button,
+.notification .window:not(.growl) .button {
+  background: #fff !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  color: #007db5 !important;
+  -webkit-border-radius: 0px !important;
+  -moz-border-radius: 0px !important;
+  border-radius: 0px !important;
+  border: none !important;
+  margin-bottom: 1px;
 }
-.notification .window.notify.alert {
-  background: #bfbfbf;
+.notification .window:not(.growl).error {
+  background: #dd2916;
+  color: #fff;
 }
-.notification .window.notify.success {
-  background: #3fb58e;
-}
-.notification .window.url .close {
-  background: #000;
-  border: solid 2px #fff;
-  -webkit-box-shadow: 0 0 4px #000;
-  -moz-box-shadow: 0 0 4px #000;
-  box-shadow: 0 0 4px #000;
+.notification .window:not(.growl).success {
+  background: #2f886b;
+  color: #fff;
 }
 /* -------------------------- BUTTONS -------------------------- */
 a.button,
