--- a/src/stylesheets/Lungo.layout.article.styl
+++ b/src/stylesheets/Lungo.layout.article.styl
@@ -20,7 +20,7 @@ article
   visibility: hidden
   z-index: 0
 
-  &.active, &:first-child
+  &.active
     visibility: visible
     display: block
     z-index: 1
