--- a/src/stylesheets/Lungo.layout.styl
+++ b/src/stylesheets/Lungo.layout.styl
@@ -20,7 +20,7 @@ section
   display: none
 
   transition-property( opacity, z-index, transform )
-  transition-duration( 400ms )
+  transition-duration( TRANSITION_TIME )
   transition-timing-function( DEFAULT_TRANSITION )
   transform( translateZ(0) )
   backface-visibility( hidden )
