--- a/src/stylesheets/import/constants.styl
+++ b/src/stylesheets/import/constants.styl
@@ -15,3 +15,5 @@ DEFAULT_TRANSITION  = easeOutSine
 FONT_SIZE_TINY      = 11px
 FONT_SIZE_SMALL     = 0.9em
 FONT_SIZE_BIG       = 1.2em
+
+TRANSITION_TIME     = 350ms
