Fix notification background

--- a/src/stylesheets/lungo.widgets.notification.styl
+++ b/src/stylesheets/lungo.widgets.notification.styl
@@ -18,8 +18,7 @@ LOADING = 104px
   width: 100%
   height: 100%
   z-index: 3
-  // display: none
-
+  display: none
   background-color: OPACITY
 
   & .window
