--- a/src/stylesheets/css/Lungo.widgets.notification.css
+++ b/src/stylesheets/css/Lungo.widgets.notification.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 100%;
   z-index: 3;
+  display: none;
   background-color: rgba(0,0,0,0.75);
 }
 .notification .window {
