Perfomance in a call to a section from aside

--- a/src/stylesheets/Lungo.layout.article.styl
+++ b/src/stylesheets/Lungo.layout.article.styl
@@ -25,9 +25,9 @@ article
     display: block
     z-index: 1
 
-  &.pull
-    transition-property(transform)
-    transition-duration(300ms)
+    &.pull
+      transition-property(transform)
+      transition-duration(TRANSITION_TIME)
 
 header
   &:not(.extended) ~ article
