--- a/src/stylesheets/Lungo.widgets.pull.styl
+++ b/src/stylesheets/Lungo.widgets.pull.styl
@@ -10,7 +10,7 @@
 @import "import/constants.styl"
 @import "import/vendor.styl"
 
-section > [data-control="pull"]
+section.show > [data-control="pull"]
   position: absolute
   z-index: -1
   top: HEADER_FOOTER_HEIGHT
