--- a/src/stylesheets/css/Lungo.layout.css
+++ b/src/stylesheets/css/Lungo.layout.css
@@ -6,14 +6,14 @@
  *
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
-section {
+body[data-position="absolute"] > section {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  display: none;
+}
+body[data-position="fixed"] > section {
+  position: fixed;
+}
+body[data-position="fixed"] > section[data-transition] {
+  display: block !important;
   -webkit-transition-property: opacity z-index transform;
   -moz-transition-property: opacity z-index transform;
   transition-property: opacity z-index transform;
@@ -23,28 +23,25 @@ section {
   -webkit-transition-timing-function: easeOutSine;
   -moz-transition-timing-function: easeOutSine;
   transition-timing-function: easeOutSine;
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  transform: translateZ(0);
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+section {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: none;
 /* Transition: POP */
 /* Transition: SLIDE */
 /* Transition: COVER */
 /* Transition: FADE */
 }
-section:first-child,
 section.show {
-  z-index: 1;
+  z-index: 2;
   display: block;
-}
-section.hide {
-  z-index: -1;
-  display: none;
-}
-section[data-transition] {
-  display: block !important;
 }
 section[data-transition="pop"] {
   opacity: 0;
@@ -52,7 +49,6 @@ section[data-transition="pop"] {
   -moz-transform: scale(1.15);
   transform: scale(1.15);
 }
-section[data-transition="pop"]:first-child,
 section[data-transition="pop"].show {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
@@ -71,7 +67,6 @@ section[data-transition="slide"] {
   transform: translateX(100%);
   visibility: visible !important;
 }
-section[data-transition="slide"]:first-child,
 section[data-transition="slide"].show {
   -webkit-transform: translateX(0%);
   -moz-transform: translateX(0%);
@@ -87,7 +82,6 @@ section[data-transition="cover"] {
   -moz-transform: translateY(110%);
   transform: translateY(110%);
 }
-section[data-transition="cover"]:first-child,
 section[data-transition="cover"].show,
 section[data-transition="cover"].hide {
   -webkit-transform: translateY(0%);
